plugins {
    id 'java'
}

group = 'com.coderecipe'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
    maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
}

dependencies {
    implementation 'org.springframework.cloud:spring-cloud-starter-config'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.keycloak:keycloak-spring-boot-starter:21.1.1'
    implementation 'org.keycloak:keycloak-admin-client:21.1.1'
    implementation 'org.keycloak.bom:keycloak-adapter-bom:21.1.1'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

ext {
    set('springCloudVersion', "2022.0.2")
    set('keyCloakVersion', '21.1.1')
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"

    }
}

test {
    useJUnitPlatform()
}